--- a/.settings/com.appcelerator.titanium.desktop.prefs
+++ b/.settings/com.appcelerator.titanium.desktop.prefs
@@ -1,14 +1,14 @@
-#Thu Mar 01 22:56:49 CET 2012
+#Mon Mar 05 16:37:33 CET 2012
 eclipse.preferences.version=1
 packages/OSX\ 10.5\ Intel/app_page=http\://api.appcelerator.net/p/pages/app_page?token\=64vRsrN4
 packages/OSX\ 10.5\ Intel/app_version=1.0
 packages/OSX\ 10.5\ Intel/label=OSX 10.5 Intel
 packages/OSX\ 10.5\ Intel/platform=osx
 packages/OSX\ 10.5\ Intel/pubdate=2012-02-19 03\:57\:06
-packages/OSX\ 10.5\ Intel/url=http\://api.appcelerator.net/p/v1/download?token\=04vZtbZ5
+packages/OSX\ 10.5\ Intel/url=http\://api.appcelerator.net/p/v1/download?token\=Z4w2LC64
 packages/Windows\ 32-bit/app_page=http\://api.appcelerator.net/p/pages/app_page?token\=64vRsrN4
 packages/Windows\ 32-bit/app_version=1.0
 packages/Windows\ 32-bit/label=Windows 32-bit
 packages/Windows\ 32-bit/platform=win32
 packages/Windows\ 32-bit/pubdate=2012-02-19 03\:57\:06
-packages/Windows\ 32-bit/url=http\://api.appcelerator.net/p/v1/download?token\=44vZtcy3
+packages/Windows\ 32-bit/url=http\://api.appcelerator.net/p/v1/download?token\=c4w2LAQ5
