Aggiunta nota sulle adozioni DSA

--- a/.settings/com.appcelerator.titanium.desktop.prefs
+++ b/.settings/com.appcelerator.titanium.desktop.prefs
@@ -1,4 +1,4 @@
-#Thu Mar 22 12:06:43 CET 2012
+#Fri Mar 23 11:47:43 CET 2012
 =\=\=\=\=\=\=
 <<<<<<<=HEAD
 >>>>>>>=62291e049eeaa960e548753d56f98b86310591b3
@@ -8,4 +8,4 @@ packages/OSX\ 10.5\ Intel/app_version=1.0
 packages/OSX\ 10.5\ Intel/label=OSX 10.5 Intel
 packages/OSX\ 10.5\ Intel/platform=osx
 packages/OSX\ 10.5\ Intel/pubdate=2012-02-19 03\:57\:06
-packages/OSX\ 10.5\ Intel/url=http\://api.appcelerator.net/p/v1/download?token\=a4wd5NS5
+packages/OSX\ 10.5\ Intel/url=http\://api.appcelerator.net/p/v1/download?token\=94wdHkp0
